main bg animated

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">  <!-- hamburger menu icon -->
 </head>
 <body>
-  
+  <div id="back"></div>
+  <div id="front"></div>
 </body>
 </html>
 <app-root></app-root>
