--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">  <!-- hamburger menu icon -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
-
   <div id="back"></div>
   <div id="front"></div>
 </body>
